...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('reporteAccidenteScreen'),
      appBar: AppBar(
        backgroundColor: const Color(0xFF86929F),
        title: Row(
          children: [
            Image.asset(
              'assets/images/logo_2.png',
...
